Fixed some strings names in tuiomanager, added some changes to the default theme

--- a/src/server/Themes/default/system/launcher/main.tml
+++ b/src/server/Themes/default/system/launcher/main.tml
@@ -62,7 +62,7 @@ $(document).ready(function() {
 	/* Add applications here */
 
 	{ITEM_LIST}
-	add_app("javascript:GLA.OpenNewWebBrowserWindow('http://mrdoob.com/lab/javascript/webgl/clouds/');", "/resources/system/launcher/browser-icon-512x512.png", true);
+	add_app("javascript:GLA.OpenNewWebBrowserWindow('http://www.google.com');", "/resources/system/launcher/browser-icon-512x512.png", true);
 	/*
 	add_app("#", "/Test/icon1.png");
 	add_app("#", "/Test/icon2.png");
