--- a/src/server/WebRoot/apps/GlowHockey/files/index.css
+++ b/src/server/WebRoot/apps/GlowHockey/files/index.css
@@ -17,43 +17,17 @@ html, body{
 	background: #000;
     font-family: Helvetica;
     height:100%;
-}
-/*
-body > * {
-	-webkit-backface-visibility: hidden;
-	-webkit-box-sizing: border-box;
-	-webkit-transform: translate3d(0,0,0) rotate(0) scale(1);
-	min-height: 420px !important;
-}
-body.fullscreen > * {
-    min-height: 460px !important;
-}
-body.fullscreen.black-translucent > * {
-    min-height: 480px !important;
-}
-body.landscape > * {
-    min-height: 320px;
-}
-body > .current {
-    display: block !important;
-}
-*/
-
-#GloHockey {
-    position: absolute;
-    left:50%;
-    top:50%;
+    display: table;
+    width: 100%;
 }
 
-#GloHockey canvas {
+canvas{
 
 }
-#GloHockey canvas.hover {
-	
-}
-#GloHockey canvas.down {
 
+#content {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle
 }
-#GloHockey canvas.drag {
 
-}
