--- a/src/server/WebRoot/apps/GlowHockey/files/index.css
+++ b/src/server/WebRoot/apps/GlowHockey/files/index.css
@@ -28,6 +28,6 @@ canvas{
 #content {
     display: table-cell;
     text-align: center;
-    vertical-align: middle
+    vertical-align: middle;
 }
 
